--- a/ecommerce frontend/src/App.css
+++ b/ecommerce frontend/src/App.css
@@ -12,7 +12,7 @@
   padding: 8px 10px;
   color: white !important;
   /* color: #a5f2c6 !important; */
-  background-color: #2d453d !important;
+  background-color: rgb(59, 136, 59) !important;
   font-weight: 600 !important;
 }
 
