--- a/ecommerce frontend/src/App.css
+++ b/ecommerce frontend/src/App.css
@@ -15,3 +15,30 @@
   background-color: rgb(18, 106, 51) !important;
   font-weight: 600 !important;
 }
+
+.select-dropdown {
+  appearance: none;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path fill="%23ffffff" d="M7 7l3-3 3 3m0 6l-3 3-3-3"/></svg>');
+  background-repeat: no-repeat;
+  background-position-x: 100%;
+  background-position-y: 50%;
+  padding-right: 1rem; /* Adjust based on the size of your arrow */
+}
+
+/* This applies to all scrollable elements */
+::-webkit-scrollbar {
+  width: 6px; /* width of the entire scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(235, 235, 235) ; /* color of the tracking area */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; /* color of the scroll thumb */
+  border-radius: 10px; /* roundness of the scroll thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* color of the scroll thumb when hovering */
+}
