--- a/ecommerce frontend/src/Stripe.css
+++ b/ecommerce frontend/src/Stripe.css
@@ -1,17 +1,18 @@
   
 .Stripe  form {
-    width: 30vw;
+    width: 35vw;
     min-width: 500px;
     align-self: center;
     box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
       0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
     border-radius: 7px;
+    color: white;
     padding: 40px;
   }
   
-  
   #payment-message {
     color: rgb(105, 115, 134);
+    color: white;
     font-size: 16px;
     line-height: 20px;
     padding-top: 12px;
@@ -20,8 +21,14 @@
   
   #payment-element {
     margin-bottom: 24px;
+    color: white;
+    background-color: rgb(91, 91, 153);
+    border-radius: 10px;
+    padding: 2rem;
   }
-  
+  #payment-element label{
+    color: white;
+  }
   /* Buttons and links */
   .Stripe button {
     background: #5469d4;
@@ -113,8 +120,9 @@
   }
   
   @media only screen and (max-width: 600px) {
-    form {
-      width: 80vw;
-      min-width: initial;
+    .Stripe  form {
+      width: 50vw;
+      padding: 4rem;
     }
+    
   }
